--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ep_react_rewrite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kyzooghost.github.io/ep_react_rewrite/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^3.2.0",
     "fuse": "^0.4.0",
+    "gh-pages": "^3.2.3",
     "gifsicle": "^5.2.0",
     "guetzli": "^3.0.1",
     "moment": "^2.29.1",
@@ -28,6 +30,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
